# DevBuddyAI

./: .devbuddy.yaml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DEFINITIONS.md  DEVELOPMENT_LOG.md  Dockerfile  LICENSE  README.md  README_ja.md  SECURITY.md  STATUS.md  TASKS.md  action.yml  docker-compose.yml  fly.toml  mkdocs.yml  pyproject.toml  railway.toml  render.yaml
.claude/: DEVELOPMENT_LOG.md  REVENUE_METRICS.md  SESSION_REPORT.md  settings.json
.github/workflows/: ci.yml  devbuddy-action.yml  pages.yml  publish.yml
docs/: CONTRIBUTING.md  DEPLOY_GUIDE.md  PYPI_PUBLISH_GUIDE.md  QUICKSTART.md  api.md  index.html  installation.md  legal.html  privacy.html  terms.html  usage.md
docs_src/: changelog.md  contributing.md  index.md  installation.md  usage.md
docs_src/api/: fixer.md  formatters.md  generator.md  index.md  reviewer.md
docs_src/api/analyzers/: go.md  js.md  python.md  rust.md
docs_src/api/integrations/: git.md  github.md
docs_src/api/llm/: client.md  prompts.md
logs/claude_runs/: 20260107_231019_init-002.json
samples/: buggy_code.py  clean_code.py  cli_tool.py  data_processing.py  web_api_server.py
src/devbuddy/: __init__.py  __main__.py  cli.py
src/devbuddy/analyzers/: __init__.py  go_analyzer.py  js_analyzer.py  python_analyzer.py  rust_analyzer.py
src/devbuddy/core/: __init__.py  billing.py  fixer.py  formatters.py  generator.py  licensing.py  models.py  reviewer.py
src/devbuddy/integrations/: __init__.py  git.py  github.py
src/devbuddy/llm/: __init__.py  client.py  prompts.py
src/devbuddy/server/: __init__.py  webhook.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_billing.py  test_cli.py  test_e2e.py  test_fixer.py  test_formatters.py  test_generator.py  test_git.py  test_github.py  test_go_analyzer.py  test_js_analyzer.py  test_licensing.py  test_llm_client.py  test_prompts.py  test_reviewer.py  test_rust_analyzer.py  test_webhook.py
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: client.ts  diagnostics.ts  extension.ts
(+7 files in other folders)
